<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_rootpath"
		android:textColor="@color/black"
		android:textSize="25sp" />

	<TextView
		android:id="@+id/rootPathTextView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/pickPath"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/pick" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/url_requests_filename"
		android:textSize="25sp" />

	<EditText
		android:id="@+id/reqFileName"
		android:hint="@string/file_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/log_filename" />

	<EditText
		android:id="@+id/logFileName"
		android:hint="@string/file_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/database_filename" />

	<EditText
		android:id="@+id/dbFileName"
		android:hint="@string/file_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/user_agent_string" />

	<EditText
		android:id="@+id/userAgentString"
		android:hint="@string/user_agent_string"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>