<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="8dp">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:padding="8dp"
		android:text="@string/welcome_msg"
		android:textSize="30sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/choose_the_location_to_save_the_web" />

		<Button
			android:id="@+id/pickPath"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pick" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/the_selected_location_is" />

		<TextView
			android:id="@+id/rootPathTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">

		<Button
			android:id="@+id/start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/start" />

	</LinearLayout>

</LinearLayout>