<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="4dp"
	app:cardCornerRadius="4dp"
	app:cardElevation="2dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:padding="8dp">

		<TextView
			android:id="@+id/host"
			android:layout_width="70dp"
			android:layout_height="wrap_content"
			android:text="@string/host" />

		<TextView
			android:id="@+id/nametext"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:clickable="true"
			android:focusable="true"
			android:onClick="loadPage"
			android:padding="8dp"
			android:text="@string/url"
			android:textSize="16sp" />

		<TextView
			android:id="@+id/size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/size"
			android:textSize="14sp" />

	</LinearLayout>

</androidx.cardview.widget.CardView>
