<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="3dp">

		<EditText
			android:id="@+id/search_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/enter_keywords_here" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/webpages_refresh_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/refresh" />

			<Button
				android:id="@+id/searchBtn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/search" />

		</LinearLayout>

	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/webpages_hosts"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:layout_weight="1" />

</LinearLayout>
